--- a/css/style.css
+++ b/css/style.css
@@ -3,4 +3,48 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    border: 1px red dashed;
+}
+
+
+/* Core Styles */
+#wrapper {
+    background: #f4f4f4;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+}
+
+.container {
+    width: 450px;
+    background: #a3a3a3;
+    margin: auto;
+    border: 1px red dashed;
+}
+.container h1 {
+    font-style: italic;
+    text-align: center;
+    margin: 8px;
+}
+
+span {
+    font-size: 24px;
+    font-style: italic;
+    font-weight: bold;
+    margin: 8px;
+}
+#text,
+#author {
+    width: 95%;
+    height: 2em;
+    background: #fff;
+    color: #000;
+    border-radius: 16px;
+    margin: 8px;
+}
+#button {
+    text-align: center;
+    width: 100px;
+    margin-bottom: 16px;
+    margin-left: 170px;
 }
